--- a/src/styles/AboutProduct.scss
+++ b/src/styles/AboutProduct.scss
@@ -1,7 +1,7 @@
 /* About.css */
 .about-section {
   padding: 50px 20px;
-  background-image: url("../images/About.jpg"); /* Replace with your background image */
+  background-image: url("../images/About.jpg"); 
   background-size: cover;
   background-position: center;
   color: #fff;
@@ -25,7 +25,7 @@
   max-width: 900px;
   margin: 0 auto;
   padding: 20px;
-  background: rgba(0, 0, 0, 0.6); /* Slightly darker overlay */
+  background: rgba(0, 0, 0, 0.6); 
   border-radius: 15px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
 }
