--- a/src/styles/ChatWindow.scss
+++ b/src/styles/ChatWindow.scss
@@ -59,8 +59,8 @@ body {
     border: 1px solid #333;
     border-radius: $border-radius;
     box-shadow: $btn-shadow;
-    height: 70vh; // Adjusted height for chatbox
-    overflow: hidden; // Hide overflow to control scrolling separately
+    height: 70vh; 
+    overflow: hidden;
     width: 100%;
     max-width: 900px;
     position: relative;
