--- a/src/styles/HomePage.scss
+++ b/src/styles/HomePage.scss
@@ -2,7 +2,7 @@
     scroll-behavior: smooth;
   
     #home, #about, #products, #contact {
-      padding: 80px 20px; // Adjust padding as needed
+      padding: 80px 20px; 
     }
   }
   
